--- a/css/style.css
+++ b/css/style.css
@@ -136,20 +136,84 @@ a{
     justify-content: space-between;
 
 }
-.input-fild select, button{
+.input-fild select{
     width:23%;
     color:var(--normal-text-color);
     font-size: 1.6rem;
-   padding:1rem 2rem;
+    padding:1rem 2rem;
     font-weight: 400;
     line-height: normal;
     border-radius: 1rem;
 }
 .input-fild button{
     background-color: var(--button-background-color);
-    color:var(--white-text-color)
+    color:var(--white-text-color);
+    width:23%;
+    cursor: pointer;
+    font-size: 1.6rem;
+    font-weight: 400;
+    border-radius: 1rem;
+    padding:1rem 2rem;
 }
 .input-fild button span{
     padding-right: 3.5rem;
 
+}
+/*popular area style */
+#popular{
+    padding:2rem 0;
+    margin:3rem 0;
+}
+.popular-are{
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+.popular-cotent{
+    width:50%;
+
+}
+.popular-cotent h1{
+    color: var(--normal-text-color);
+    font-size: var(--heading-text);
+    font-weight: 800;
+
+}
+.popular-cotent>p{
+    color: var(--normal-text-color);
+    font-size: var(--small-text);
+    font-weight: 400;
+    line-height: 26px;
+}
+.popular-cotent ul{
+    padding:3rem;
+}
+.popular-cotent ul li{
+    color: var(--normal-text-color);
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 26px;
+    padding:1rem 0;
+}
+.popular-cotent button{
+    color:var(--white-text-color);
+    background-color: var(--button-background-color);
+    padding:1dvh 2rem;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    border-radius: 1rem;
+    cursor: pointer;
+   
+}
+.popular-cotent button:hover{
+    background-color: var(--normal-text-color);
+}
+.popular-img{
+    width:50%;
+}
+.popular-img img{
+    width:90%;
+    display: block;
+    margin: auto;
 }
