--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,261 @@ a{
     display: block;
     margin: auto;
 }
+
+/*destination area style start*/
+.destination-area h1{
+    color: var(--normal-text-color);
+    text-align: center;
+    font-size: var(--heading-text);
+    font-weight: 800;
+}
+.destination-area p{
+    text-align: center;
+    font-size: var(--small-text);
+    font-weight: 400;
+    width:50%;
+    margin:auto;
+}
+.top-img{
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+
+}
+.top-1{
+    width:48%;
+    position: relative;
+}
+.top-2{
+    width:48%;
+}
+.top-1 .top-2 img{
+    width:100%;
+    margin-bottom: 2rem;
+}
+.top-1 .top-2 h2{
+    min-width: 100px;
+    height:20px;
+    position: absolute;
+    top:0;
+    left: 0;
+    right:0;
+    bottom: 0;
+    margin: auto;
+}
+.center-img{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-gap: 2rem;
+}
+.center-img img{
+    width:100%;
+    height:260px;
+}
+
+
+
+/*choose ares style start*/
+#choose{
+    padding:2rem 0;
+    margin:2rem 0;
+}
+.choose-area h1{
+    color:var(--normal-text-color);
+    font-size: var(--heading-text);
+    font-weight: 700;
+    text-align: center;
+}
+.choose-area>p{
+    color:var(--normal-text-color);
+    font-size: var(--small-text);
+    font-weight: 400;
+    text-align: center;
+    width:50%;
+    margin: auto;
+    display: block;
+    line-height: 2.6rem;
+}
+.choose-cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.card{
+    width:47%;
+    padding:0.5rem;
+    border:1px solid green;
+    margin:1rem 0;
+    border-radius: 1.66rem;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+}
+.card img{
+    width:20%;
+}
+.card h3{
+    color: var(--normal-text-color);
+    font-size: 2.4rem;  
+    font-weight: 800;
+}
+.card>p{
+    color: var(--normal-text-color);
+    font-size: var(--small-text);
+    font-weight: 400;
+    line-height: 2.6rem;
+}
+.hotel-background{
+    background: rgba(238, 138, 23, 0.05);
+}
+.map-background{
+    background: rgba(41, 206, 246, 0.05);
+}
+.price-background{
+    background: rgba(233, 68, 68, 0.05);
+}
+/*discounts area style start*/
+
+#discounts{
+    margin:2rem 0;
+
+}
+.discounts-area h1{
+    color: var(--normal-text-color);
+    text-align: center;
+    font-size: var(--heading-text);
+    font-weight: 800;
+
+}
+.discounts-area p{
+    color: var(--normal-text-color);
+    text-align: center;
+    font-size: var(--small-text);
+    font-weight: 400;
+}
+.discount-card{
+    width:100%;
+    height:400px;
+    margin:2rem 0;
+    border-radius: 1rem;
+    background-image: url(/Images/discount1.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+.discount-content{
+    width:50%;
+    height:60%;
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255,0.8);
+    position: absolute;
+    top:0;
+    right:2rem;
+    bottom:0;
+    margin:auto;
+    padding:1rem;
+}
+.card-2{
+    right:53rem;
+
+}
+.discount-card2{
+    width:100%;
+    height:400px;
+    margin:2rem 0;
+    border-radius: 1rem;
+    background-image: url(/Images/discount2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+
+}
+.discount-content ul{
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+}
+.discount-content ul li{
+    font-size: var(--small-text);
+    color: var(--normal-text-color);
+    font-weight: 400;
+}
+.discount-content h3{
+    color: var(--normal-text-color);
+    font-size: 2.4rem;
+    font-weight: 800;
+}
+.discount-content p{
+    color: var(--normal-text-color);
+    font-size: var(--small-text);
+    font-weight: 400;
+    line-height: 2.6rem;
+}
+.discount-content .card-price{
+    color: var(--button-background-color);
+    font-size: 2rem;
+    font-weight: 800;
+}
+.discount-content button{
+    color:var(--white-text-color);
+    font-size: 1.6rem;
+    background-color: var(--button-background-color);
+    padding:1rem 2rem;
+    border-radius: 0.5rem;
+}
+.discount-content button:hover{
+    background-color: var(--normal-text-color);
+
+}
+/*place area style start*/
+#place{
+    margin:4rem 0;
+}
+.place-area{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.place-content{
+    width:50%;
+    padding:1rem 0;
+}
+.place-content h1{
+    color: var(--normal-text-color);
+    font-size: 40px;
+    font-weight: 800;
+}
+.place-content p{
+    color: var(--normal-text-color);
+    font-size: var(--small-text);
+    font-weight: 400;
+ 
+}
+.place-content ul{
+    padding:1rem;
+}
+.place-content ul li{
+    color: #131318;
+    font-size: 1.6rem;
+    font-weight: 700;
+    line-height: 3.6rem;
+
+}
+.place-content button{
+    padding:1rem 2rem;
+    color: var(--white-text-color);
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 800;
+    background-color: var(--button-background-color);
+    border-radius: 0.5rem;
+}
+.place-video{
+    width:50%;
+}
+.place-video img{
+    width:90%;
+    display: block;
+    margin: auto;
+}
