--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ a{
 .hero-area{
     width:100%;
     height:80vh;
-    background-image: url(/Images/hero.png);
+    background-image: url('../Images/hero.png');
     background-size: cover;
     background-position: center;
     position: relative;
@@ -354,7 +354,7 @@ a{
     height:400px;
     margin:2rem 0;
     border-radius: 1rem;
-    background-image: url(/Images/discount1.png);
+    background-image: url('../Images/discount1.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -381,7 +381,7 @@ a{
     height:400px;
     margin:2rem 0;
     border-radius: 1rem;
-    background-image: url(/Images/discount2.png);
+    background-image: url('../Images/discount2.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -537,7 +537,7 @@ a{
 .news-img{
     width:50%;
     height:400px;
-    background-image: url(/Images/news-img.png);
+    background-image: url('../Images/news-img.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
