--- a/css/style.css
+++ b/css/style.css
@@ -232,44 +232,67 @@ a{
     width:50%;
     margin:auto;
 }
-.top-img{
-    width:100%;
+.top-imgs{
     display: flex;
     justify-content: space-between;
 
 }
-.top-1{
-    width:48%;
+.top-img{
+    width:49%;
     position: relative;
 }
-.top-2{
-    width:48%;
-}
-.top-1 .top-2 img{
+.top-img img{
     width:100%;
-    margin-bottom: 2rem;
 }
-.top-1 .top-2 h2{
-    min-width: 100px;
-    height:20px;
+.top-img-text{
+    width:300px;
+    height:100px;
     position: absolute;
     top:0;
-    left: 0;
+    left:0;
     right:0;
     bottom: 0;
     margin: auto;
 }
-.center-img{
+.top-img-text h1{
+    color: var(--white-text-color);
+    text-align: center;
+    font-size: 2.8rem;
+    font-weight: 800;
+    margin-top: 3rem;
+}
+.center-imgs{
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-gap: 2rem;
+    grid-template-columns: 1fr auto 1fr;
+    grid-gap:1rem;
+
+
+}
+.center-img{
+    position: relative;
 }
 .center-img img{
     width:100%;
-    height:260px;
+    height:300px;
+    margin: 1rem 0;
 }
-
-
+.center-img-text{
+    width:300px;
+    height:100px;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom: 0;
+    margin: auto;
+}
+.center-img-text h1{
+    color: var(--white-text-color);
+    text-align: center;
+    font-size: 2.58rem;
+    font-weight: 800;
+    margin-top: 3rem;
+}
 
 /*choose ares style start*/
 #choose{
