--- a/css/responsive.css
+++ b/css/responsive.css
@@ -76,6 +76,41 @@
         width:100%;
        
     }
+    /*destination ares responsive start*/
+    .destination-area h1{
+       font-size: var(--heading-text);
+    }
+    .destination-area p{
+        width:90%;
+        font-size: 1.2rem;
+
+    }
+    .top-imgs{
+        flex-direction: column;
+    
+    }
+
+    .top-img{
+        width:100%;
+    }
+    .center-imgs{
+    
+        grid-template-columns: 1fr;
+        
+    
+    
+    }
+    .center-img img{
+        height:150px;
+    }
+    .bottom-imgs{
+        grid-template-columns: 1fr;
+    
+    }
+    .bottom-img img{
+        width:100%;
+        height:150px;
+    }
 
     /*choose area responsive style start*/
     .choose-area h1{
