--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,10 @@ a{
 }
 
 /*destination area style start*/
+#destination{
+    padding:1rem 0;
+    margin:2rem 0;
+}
 .destination-area h1{
     color: var(--normal-text-color);
     text-align: center;
@@ -232,13 +236,16 @@ a{
     width:50%;
     margin:auto;
 }
+.destination-images{
+    padding:1rem 0;
+}
 .top-imgs{
     display: flex;
     justify-content: space-between;
 
 }
 .top-img{
-    width:49%;
+    width:49.5%;
     position: relative;
 }
 .top-img img{
@@ -293,7 +300,38 @@ a{
     font-weight: 800;
     margin-top: 3rem;
 }
+.bottom-imgs{
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-gap: 1rem;
 
+}
+.bottom-img{
+    position: relative;
+}
+.bottom-img img{
+    width:100%;
+    height:300px;
+}
+.bottom-text{
+    width:300px;
+    height:100px;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom: 0;
+    margin: auto;
+
+}
+.bottom-text h1{
+    color: var(--white-text-color);
+    text-align: center;
+    font-size: 2.58rem;
+    font-weight: 800;
+    margin-top: 3rem;
+
+}
 /*choose ares style start*/
 #choose{
     padding:2rem 0;
